2008-05-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con.cc:
	Added missing directory separator in remote sever dlg

2008-05-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer/text-render.cc:
	Fixed bug #496150 (scrolling with mouse wheel)

2008-05-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-search-dialog.cc:
	* src/gnome-cmd-user-actions.cc:
	i18n

2008-05-09  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-list-popmenu.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added "Open folder in Nautilus" action to RMB and user actions.

2008-05-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-delete-dialog.cc
	Center delete progress window

	* src/gnome-cmd-user-actions.cc:
	Added "mark.invert" to user actions

2008-05-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-xfer.cc:
	* src/gnome-cmd-xfer-progress-win.cc:
	Center transfer progress window

2008-05-03  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Do not pass unused pointer to file_selector in handle_key_event()

2008-05-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-win.cc:
	Do not pass unused pointer to main_win

2008-04-30  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-key-shortcuts-dialog.cc:
	* src/gnome-cmd-key-shortcuts-dialog.h:
	gnome_cmd_key_shortcuts_dialog_new() returns response==GTK_RESPONSE_OK now

2008-04-29  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Fixed problem #499761 (search window cleared when column sorted)

	* src/dirlist.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con.cc:
	* src/gnome-cmd-delete-dialog.cc:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-props-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-search-dialog.cc:
	* src/gnome-cmd-xfer.cc:
	Replacing obsoleted gtk_timeout_add() with g_timeout_add()
