@@ -1,3 +1,8 @@
+2008-05-30  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-prepare-xfer-dialog.cc:
+	Fixed problem with full file path handling while copying/moving to mounted devices
+
 2008-05-28  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-con.cc:
